* 2007-07-31 - thorben.betten@open-xchange.com

 - Bugfix #6274: Changed error message if IMAP authentication fails
   (possibly due to a changed user password)

* 2007-07-30 - francisco.laguna@open-xchange.com

 - Bug #7792 : Added Logging code. Error 500 is always logged with a level of ERROR. 

* 2007-07-10 - marcus.klein@open-xchange.com

 - Bugfix #8351: Assigned 512MB maximum memory to groupware server.

* 2007-07-09 - thorben.betten@open-xchange.com

 - Bugfix #7950: Proper handling of quotes in email address headers
 - Bugfix #8300: Proper display of email addresses in reply/forward prefix

* 2007-06-28 - marcus.klein@open-xchange.com

  - Bugfix #8007: Partly fix. Disabled possibility to create unbound folders
    through WebDAV XML interface. Replacing existing unbound folders in database
    with contact folders to prevent AJAX GUI errors.

* 2007-06-27 - francisco.laguna@open-xchange.com

  - Add french messages to ox_languages.jar

* 2007-06-25 - martin.kauss@open-xchange.com

  - Fixed bug #7883. The reminder was set for all participants even if only
    one participant has set the reminder. This has been fixed.

  - Fixed an issue that while creating an recurring exception for whole
    day events the master recurring appointment has the same start/end time
    after calculation.

  - Fixed an whole day calculation issue for recurring events.

* 2007-06-20 - marcus.klein@open-xchange.com

 - Added option for showing external participants without email address.
   CONFIG CHANGE: new file participant.properties and new path to this file in
   system.properties.

* 2007-06-12 - francisco.laguna@open-xchange.com

 - Bugfix #7683 OXEE: Use fully qualified hostname in direct link generation.

* 2007-06-12 - choeger@open-xchange.com

 - Bugfix ID#7859 OXEE: Groupware server must not be restarted while update

* 2007-06-08 - thorben.betten@open-xchange.com

 - IMAP folder rights are now cached in user's session to decrease