@@ -410,7 +410,7 @@ public final class SQL {
                 .get(type)));
         }
         sql = "DELETE FROM " + tableName
-            + " WHERE cid=? AND task=? AND user IN (";
+            + " WHERE cid=? AND task=? AND user=?";
         for (StorageType type : StorageType.values()) {
             DELETE_PARTS.put(type, sql.replace(tableName, PARTS_TABLES
                 .get(type)));
